@@ -22,6 +22,8 @@ script/hypnotoad.pid
 extlib/*
 gitprep.my.conf
 data/rep/*
+data/work/*
+!data/work/.gitignore
 data/gitprep.db
 !data/rep/.gitignore
 setup/log/*
