@@ -11,6 +11,7 @@
   - separete database creating logic to setup_database script
   - add name and mail column to user table. mail is required for user registration.
   - add user update page
+  - fix bug that repository with read can't be created when git global user name and email
 1.12 (7 Feb 2016)
   - Catch up latest Github design.
   - Fix bug that relative image path in README.md and blob html.
